--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -2,7 +2,9 @@
   "LOGIN_TITLE": "Inicio De Sesión",
   "LOGIN_USERNAME": "Usuario",
   "LOGIN_USERNAME_PLACEHOLDER": "Ingrese su usario aquí.",
-  "LOGIN_PASSWORD": "Clave",
-  "LOGIN_PASSWORD_PLACEHOLDER": "Ingrese su clave aquí."
-
+  "LOGIN_PASSWORD": "Contraseña",
+  "LOGIN_PASSWORD_PLACEHOLDER": "Ingrese su contraseña aquí.",
+  "LOGIN_MISSING_USERNAME": "Debe ingresar un usuario.",
+  "LOGIN_MISSING_PASSWORD": "Debe ingresar su contraseña.",
+  "LOGIN_BUTTON_TITLE": "Iniciar Sesión"
 }
