--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -9,6 +9,7 @@
      "LOGIN_MISSING_USERNAME": "Username should not be empty.",
      "LOGIN_MISSING_PASSWORD": "Password should not be empty.",
      "LOGIN_BUTTON_TITLE": "LOGIN",
+     "_WRONG_USER_PASSWORD": "Your Email or Password is incorrect.",
 
      "_comment_home": "Home Translations"
 }
