--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -9,6 +9,7 @@
   "LOGIN_MISSING_USERNAME": "Debe ingresar un usuario.",
   "LOGIN_MISSING_PASSWORD": "Debe ingresar su contraseña.",
   "LOGIN_BUTTON_TITLE": "Iniciar Sesión",
+  "_WRONG_USER_PASSWORD": "Tus credenciales son incorrectas.",
 
   "_comment_home": "Home Translations"
 }
