--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -36,5 +36,15 @@
      "PAYMENT_VIEW_BALANCE_TO_PAY_TITLE": "Balance To Pay",
      "PAYMENT_VIEW_NEW_PAYMENT_AMOUNT_TITLE": "New Payment Amount",
      "PAYMENT_VIEW_CREATE_PAYMENT_BUTTON_TITLE": "Create Payment",
-     "PAYMENT_VIEW_CANCEL_BUTTON_TITLE": "Cancel"
+     "PAYMENT_VIEW_CANCEL_BUTTON_TITLE": "Cancel",
+
+     "_comment_purchase_order_crud_view": "PURCHASE_ORDER_CRUD_VIEW",
+
+     "PURCHASE_ORDER_CRUD_VIEW_TITLE": "Purchase Order",
+     "PURCHASE_ORDER_CRUD_VIEW_SELECT_ARTICLE_TITLE": "Select Purchase Article",
+     "PURCHASE_ORDER_CRUD_VIEW_ITEMS_TITLE": "Your Items",
+     "PURCHASE_ORDER_CRUD_VIEW_ADD_NEW_ITEM_TITLE": "Add New Item",
+     "PURCHASE_ORDER_CRUD_VIEW_TOTAL_TO_PAY_TITLE": "Amount To Pay",
+     "PURCHASE_ORDER_CRUD_VIEW_CREATE_ORDER_BUTTON_TITLE": "Create Order",
+     "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancel"
 }
