--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -36,6 +36,16 @@
   "PAYMENT_VIEW_BALANCE_TO_PAY_TITLE": "Saldo a Pagar",
   "PAYMENT_VIEW_NEW_PAYMENT_AMOUNT_TITLE": "Nuevo Monto",
   "PAYMENT_VIEW_CREATE_PAYMENT_BUTTON_TITLE": "Crear Pago",
-  "PAYMENT_VIEW_CANCEL_BUTTON_TITLE": "Cancelar"
+  "PAYMENT_VIEW_CANCEL_BUTTON_TITLE": "Cancelar",
+
+  "_comment_purchase_order_crud_view": "PURCHASE_ORDER_CRUD_VIEW",
+
+  "PURCHASE_ORDER_CRUD_VIEW_TITLE": "Order De Compra",
+  "PURCHASE_ORDER_CRUD_VIEW_SELECT_ARTICLE_TITLE": "Selecciona el artículo de compra",
+  "PURCHASE_ORDER_CRUD_VIEW_ITEMS_TITLE": "Tus items",
+  "PURCHASE_ORDER_CRUD_VIEW_ADD_NEW_ITEM_TITLE": "Agrega Nuevo Item",
+  "PURCHASE_ORDER_CRUD_VIEW_TOTAL_TO_PAY_TITLE": "Total a Pagar",
+  "PURCHASE_ORDER_CRUD_VIEW_CREATE_ORDER_BUTTON_TITLE": "Crear Order",
+  "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancelar"
 
 }
