--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -38,6 +38,7 @@
   "PAYMENT_VIEW_CURRENCY_TITLE": "Seleccione La Moneda",
   "PAYMENT_VIEW_TOTAL_TO_PAY_TITLE": "Monto Total",
   "PAYMENT_VIEW_TOTAL_PAID_TITLE": "Total Pagado",
+  "PAYMENT_VIEW_EXCHANGE_RATE_TITLE": "Exchange Rate",
   "PAYMENT_VIEW_BALANCE_TO_PAY_TITLE": "Saldo a Pagar",
   "PAYMENT_VIEW_NEW_PAYMENT_AMOUNT_TITLE": "Nuevo Monto",
   "PAYMENT_VIEW_CREATE_PAYMENT_BUTTON_TITLE": "Crear Pago",
