added new textfields

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -52,5 +52,9 @@
      "PURCHASE_ORDER_CRUD_VIEW_ADD_NEW_ITEM_TITLE": "Add New Item",
      "PURCHASE_ORDER_CRUD_VIEW_TOTAL_TO_PAY_TITLE": "Amount To Pay",
      "PURCHASE_ORDER_CRUD_VIEW_CREATE_ORDER_BUTTON_TITLE": "Create Order",
-     "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancel"
+     "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancel",
+
+     "_error_response": "Error Response",
+
+     "_400_ERROR_TITLE": "Request Error"
 }
