--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -52,6 +52,10 @@
   "PURCHASE_ORDER_CRUD_VIEW_ADD_NEW_ITEM_TITLE": "Agrega Nuevo Item",
   "PURCHASE_ORDER_CRUD_VIEW_TOTAL_TO_PAY_TITLE": "Total a Pagar",
   "PURCHASE_ORDER_CRUD_VIEW_CREATE_ORDER_BUTTON_TITLE": "Crear Order",
-  "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancelar"
+  "PURCHASE_ORDER_CRUD_VIEW_CANCEL_ORDER_BUTTON_TITLE": "Cancelar",
+
+  "_error_response": "Error Response",
+  
+  "_400_ERROR_TITLE": "Error De Requerimiento"
 
 }
