--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -58,7 +58,11 @@
 
   "_400_ERROR_TITLE": "Error De Requerimiento",
   "_400_ERROR_MESSAGE": "Algunos parametros enviados no son correctos. Ponte en contacto con nuestro soporte técnico.",
-    "_404_ERROR_TITLE": "Url No Encontrada",
-    "_404_ERROR_MESSAGE": "Ponte en contacto con nuestro soporte técnico"
+  "_404_ERROR_TITLE": "Url No Encontrada",
+  "_404_ERROR_MESSAGE": "Ponte en contacto con nuestro soporte técnico",
 
+  "_currencies": "CURRENCIES",
+  "ARGENTINE_PESO": "Peso Argentino",
+  "DIGITAL_WALLET": "Billetera Digital",
+  "AMERICAN_DOLLAR": "Dolares Americanos"
 }
