--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -76,6 +76,11 @@
      "TRANSFER_VIEW_DESTINY_CURRENCY_TITLE": "Destiny Currency",
      "TRANSFER_VIEW_TOTAL_TO_PAY_TITLE": "Amount",
      "TRANSFER_VIEW_CREATE_BUTTON_TITLE": "Transfer",
-     "TRANSFER_VIEW_CANCEL_BUTTON_TITLE": "Cancel"
+     "TRANSFER_VIEW_CANCEL_BUTTON_TITLE": "Cancel",
+
+     "_comment_cash_balance_view": "Cash Balance View",
+
+     "CASH_BALANCE_VIEW_TITLE": "Cash Balance View",
+     "CASH_BALANCE_VIEW_CANCEL_BUTTON_TITLE": "Cancel"
 
 }
