adjust code for new balance and currency handling

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -71,9 +71,9 @@
 
      "TRANSFER_VIEW_TITLE": "Transfers",
      "TRANSFER_VIEW_SOURCE_PHYSICAL_ACCOUNT_TITLE": "Source Account",
-     "TRANSFER_VIEW_SOURCE_CURRENCY_TITLE": "Source Currency",
+     "TRANSFER_VIEW_SOURCE_CURRENCY_TITLE": "Source Balance",
      "TRANSFER_VIEW_DESTINY_PHYSICAL_ACCOUNT_TITLE": "Destiny Account",
-     "TRANSFER_VIEW_DESTINY_CURRENCY_TITLE": "Destiny Currency",
+     "TRANSFER_VIEW_DESTINY_CURRENCY_TITLE": "Destiny Balance",
      "TRANSFER_VIEW_TOTAL_TO_PAY_TITLE": "Amount",
      "TRANSFER_VIEW_CREATE_BUTTON_TITLE": "Transfer",
      "TRANSFER_VIEW_CANCEL_BUTTON_TITLE": "Cancel",
