--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -70,9 +70,9 @@
 
   "TRANSFER_VIEW_TITLE": "Purchase Payment",
   "TRANSFER_VIEW_SOURCE_PHYSICAL_ACCOUNT_TITLE": "Cuenta Origen",
-  "TRANSFER_VIEW_SOURCE_CURRENCY_TITLE": "Moneda Origen",
+  "TRANSFER_VIEW_SOURCE_CURRENCY_TITLE": "Balance Origen",
   "TRANSFER_VIEW_DESTINY_PHYSICAL_ACCOUNT_TITLE": "Cuenta Destino",
-  "TRANSFER_VIEW_DESTINY_CURRENCY_TITLE": "Moneda Destino",
+  "TRANSFER_VIEW_DESTINY_CURRENCY_TITLE": "Balance Destino",
   "TRANSFER_VIEW_TOTAL_TO_PAY_TITLE": "Amount",
   "TRANSFER_VIEW_CREATE_BUTTON_TITLE": "Transferir",
   "TRANSFER_VIEW_CANCEL_BUTTON_TITLE": "Cancelar",
